add more scss files; testing homePage component and sass compiling

--- a/client/src/assets/styles/_settings.scss
+++ b/client/src/assets/styles/_settings.scss
@@ -37,7 +37,7 @@ Styling for bare, unclassed elements. This layer binds onto bare HTML element (o
 body {
   padding: 0px;
   margin: 0px;
-  background: $white;
+  background: white;
 }
 
 h1 {
