--- a/client/src/assets/styles/_components.scss
+++ b/client/src/assets/styles/_components.scss
@@ -1,5 +1,13 @@
 /* inject:scss */
 
+@import "./src/app/app.scss";
+
 @import "./src/app/components/home/homePage.scss";
+
+@import "./src/app/components/login/login.scss";
+
+@import "./src/app/components/main/main.scss";
+
+@import "./src/app/components/sideBar/sideBar.scss";
 
 /* endinject */
