--- a/client/src/assets/styles/styles.scss
+++ b/client/src/assets/styles/styles.scss
@@ -1,3 +1,8 @@
-@import '_settings.scss';
-@import '_elements.scss';
-@import '_components.scss';
+@import 'settings';
+@import 'generic';
+@import 'tools';
+@import 'generic';
+@import 'elements';
+@import 'objects';
+@import 'components';
+@import 'utilities';
