add basic routes and navigation; add workouts page; more style updates

--- a/client/src/app/components/sideBar/sideBar.scss
+++ b/client/src/app/components/sideBar/sideBar.scss
@@ -1,4 +1,4 @@
-.header{ 
+.sidebar{ 
   background: #f9fbff;
   color: #333;
   flex: 0 0 200px;
@@ -6,19 +6,19 @@
   height: 100vh;
   border-right: 1px solid #ddd;
   border-bottom: none;
+}
 
-  nav{
-    ul {
-      list-style: none;
-      text-align: center;
-      li{
-        a{
-          text-decoration: none;
-          color: #0066cc;
-          display: block;
-          margin: 5px;
-          cursor: pointer;
-        }
+.sidebar__nav{
+  ul {
+    list-style: none;
+    text-align: center;
+    li{
+      a{
+        text-decoration: none;
+        color: #0066cc;
+        display: block;
+        margin: 5px;
+        cursor: pointer;
       }
     }
   }
