--- a/client/src/assets/styles/styles.css
+++ b/client/src/assets/styles/styles.css
@@ -2192,6 +2192,10 @@ span {
   text-decoration: underline;
   color: blue; }
 
+.main {
+  height: 100vh;
+  flex: 1 1 auto; }
+
 .sidebar {
   background: #f9fbff;
   color: #333;
@@ -2211,9 +2215,32 @@ span {
     margin: 5px;
     cursor: pointer; }
 
-.main {
+.sign-up {
+  display: flex;
   height: 100vh;
-  flex: 1 1 auto; }
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; }
+  .sign-up .error {
+    padding: 0px 0px 10px;
+    color: red; }
+
+.sign-up__form {
+  margin: 20px;
+  background: grey;
+  padding: 20px;
+  box-shadow: 1px 1px 0px 1px #777; }
+
+.field-group {
+  margin: 10px 0px; }
+
+.label {
+  display: block;
+  margin-bottom: 5px; }
+
+.sign-up__sign-up-link {
+  text-decoration: underline;
+  color: blue; }
 
 /* endinject */
 /* ----- UTILITIES ----- */
