--- a/client/src/assets/styles/styles.css
+++ b/client/src/assets/styles/styles.css
@@ -2151,6 +2151,9 @@ span {
     color: #4A4D54;
     background: white;
     border: 2px solid #4A4D54; }
+  .button.-light {
+    background: #fff;
+    color: #4A4D54; }
 
 .page {
   padding: 20px; }
@@ -2160,6 +2163,25 @@ span {
   height: 100vh;
   display: flex;
   justify-content: center; }
+
+.sidebar {
+  background: #f9fbff;
+  color: #333;
+  flex: 0 0 200px;
+  padding: 20px;
+  height: 100vh;
+  border-right: 1px solid #ddd;
+  border-bottom: none; }
+
+.sidebar__nav ul {
+  list-style: none;
+  text-align: center; }
+  .sidebar__nav ul li a {
+    text-decoration: none;
+    color: #0066cc;
+    display: block;
+    margin: 5px;
+    cursor: pointer; }
 
 .login {
   display: flex;
@@ -2192,25 +2214,6 @@ span {
   height: 100vh;
   flex: 1 1 auto; }
 
-.sidebar {
-  background: #f9fbff;
-  color: #333;
-  flex: 0 0 200px;
-  padding: 20px;
-  height: 100vh;
-  border-right: 1px solid #ddd;
-  border-bottom: none; }
-
-.sidebar__nav ul {
-  list-style: none;
-  text-align: center; }
-  .sidebar__nav ul li a {
-    text-decoration: none;
-    color: #0066cc;
-    display: block;
-    margin: 5px;
-    cursor: pointer; }
-
 .sign-up {
   display: flex;
   height: 100vh;
@@ -2237,6 +2240,9 @@ span {
 .sign-up__sign-up-link {
   text-decoration: underline;
   color: blue; }
+
+.workout-single__button {
+  margin-right: 20px; }
 
 .workouts__row {
   border: 1px solid grey;
