--- a/client/src/assets/styles/_objects.scss
+++ b/client/src/assets/styles/_objects.scss
@@ -11,7 +11,6 @@
 }
 
 .button {
-  margin-top: 20px;
   font-family: $title-font;
   color: $neutral-light;
   background-color: $neutral-mid;
@@ -49,4 +48,6 @@
 
 .page{
   padding: 20px;
+  margin: 0px auto;
+  max-width: 1200px;
 }
