add styling to workout single

--- a/client/src/app/components/workouts/workoutSingle.scss
+++ b/client/src/app/components/workouts/workoutSingle.scss
@@ -5,3 +5,21 @@
 .workout-single__button{
   margin-right: 20px;
 }
+
+.workout-single__actions{
+  margin-bottom: 20px;
+  padding: 20px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+}
+
+.workout-single__details{
+  margin-bottom: 20px;
+  padding: 20px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+}
+
+.workout-single__exercise{
+  margin-bottom: 20px;
+  padding: 20px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+}
