--- a/client/src/assets/styles/styles.css
+++ b/client/src/assets/styles/styles.css
@@ -2296,6 +2296,21 @@ input {
 .workout-single__button {
   margin-right: 20px; }
 
+.workout-single__actions {
+  margin-bottom: 20px;
+  padding: 20px;
+  box-shadow: 1px 1px 1px 1px #aaa; }
+
+.workout-single__details {
+  margin-bottom: 20px;
+  padding: 20px;
+  box-shadow: 1px 1px 1px 1px #aaa; }
+
+.workout-single__exercise {
+  margin-bottom: 20px;
+  padding: 20px;
+  box-shadow: 1px 1px 1px 1px #aaa; }
+
 .workouts__row {
   border: 1px solid grey;
   padding: 10px;
