enables avatar upload by user

--- a/client/src/assets/styles/_components.scss
+++ b/client/src/assets/styles/_components.scss
@@ -12,6 +12,8 @@
 
 @import "./src/app/components/main/main.scss";
 
+@import "./src/app/components/profile/profile.scss";
+
 @import "./src/app/components/sideBar/sideBar.scss";
 
 @import "./src/app/components/signUp/signUp.scss";
