--- a/client/src/assets/styles/styles.css
+++ b/client/src/assets/styles/styles.css
@@ -2242,6 +2242,13 @@ input {
   flex: 1 1 auto;
   overflow: scroll; }
 
+.profile__form {
+  box-shadow: 1px 1px 1px 1px #aaa;
+  padding: 20px;
+  margin-bottom: 20px; }
+  .profile__form .field-group {
+    max-width: 300px; }
+
 .sidebar {
   background: #f9fbff;
   color: #333;
