--- a/client/src/assets/styles/_elements.scss
+++ b/client/src/assets/styles/_elements.scss
@@ -149,6 +149,14 @@ a {
   }
 }
 
+label{
+  padding: 0px;
+  margin: 0px 0px 10px 0px;
+  font-family: $body-font;
+  font-size: 1.3em;
+  line-height: 1.6em;
+  font-weight: 400;
+}
 span {
   padding: 0px;
   margin: 0px;
