--- a/client/src/app/components/workouts/workouts.scss
+++ b/client/src/app/components/workouts/workouts.scss
@@ -3,22 +3,21 @@
 }
 
 .workouts__row{
-  border: 1px solid grey;
-  padding: 10px;
-  margin-bottom: 10px;
   opacity: 1;
-  background: #bbb;
-  transition: opacity 250ms linear;
+  transition: opacity 100ms linear;
   cursor: pointer;
   display: flex;
   flex-wrap: wrap;
+   box-shadow: 1px 1px 1px 1px #aaa;
+  padding: 20px;
+  margin-bottom: 20px;
 
   &:last-child{
     margin-bottom: 0px;
   }
 
   &:hover{
-    opacity: 0.7;
+    opacity: 0.5;
   }
 
   &:active { 
