--- a/client/src/assets/styles/styles.css
+++ b/client/src/assets/styles/styles.css
@@ -2214,6 +2214,9 @@ input[type='file'] {
     input[type='file']::-webkit-file-upload-button:active {
       transform: translateY(1px); }
 
+.field-group {
+  margin-bottom: 20px; }
+
 .page {
   padding: 20px;
   margin: 0px auto;
@@ -2254,25 +2257,23 @@ input[type='file'] {
   height: 100vh;
   justify-content: center;
   align-items: center;
-  flex-direction: column; }
+  flex-direction: column;
+  width: 100%; }
   .login .error {
     padding: 0px 0px 10px;
     color: red; }
 
 .login__form {
+  background: white;
   margin: 20px;
-  background: grey;
-  padding: 20px;
-  box-shadow: 1px 1px 0px 1px #777; }
-
-.field-group {
-  margin: 10px 0px; }
-
-.label {
-  display: block;
-  margin-bottom: 5px; }
+  box-shadow: 1px 1px 1px 1px #aaa;
+  padding: 20px; }
 
 .login__sign-up-link {
+  background: white;
+  margin: 10px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+  padding: 20px 39px;
   text-decoration: underline;
   color: blue; }
 
@@ -2334,27 +2335,24 @@ input[type='file'] {
   height: 100vh;
   justify-content: center;
   align-items: center;
-  flex-direction: column; }
+  flex-direction: column;
+  width: 100%; }
   .sign-up .error {
     padding: 0px 0px 10px;
     color: red; }
 
 .sign-up__form {
+  background: white;
   margin: 20px;
-  background: grey;
   padding: 20px;
-  box-shadow: 1px 1px 0px 1px #777; }
-
-.field-group {
-  margin: 10px 0px; }
-
-.label {
-  display: block;
-  margin-bottom: 5px; }
+  box-shadow: 1px 1px 1px 1px #aaa; }
 
 .sign-up__sign-up-link {
   text-decoration: underline;
-  color: blue; }
+  color: blue;
+  margin: 10px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+  padding: 20px 39px; }
 
 .workout-form__actions {
   margin-bottom: 20px;
