--- a/client/src/app/components/sideBar/sideBar.scss
+++ b/client/src/app/components/sideBar/sideBar.scss
@@ -19,12 +19,12 @@
     li{
       a{
         text-decoration: none;
-        color: #0066cc;
+        color: $neutral-mid;
         display: block;
         margin: 5px;
         cursor: pointer;
         &.active{
-           color: red;
+           color: $primary;
         }
       }
     }
