--- a/client/src/app/components/home/home.scss
+++ b/client/src/app/components/home/home.scss
@@ -1,3 +1,15 @@
 .home{
  
 }
+
+.home__actions{
+  margin-bottom: 20px;
+  padding: 20px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+}
+
+.home__reports{
+  margin-bottom: 20px;
+  padding: 20px;
+  box-shadow: 1px 1px 1px 1px #aaa;
+}
