add placeholders to input fields, remove borders

--- a/client/src/assets/styles/_settings.scss
+++ b/client/src/assets/styles/_settings.scss
@@ -21,9 +21,10 @@ $border-radius: 2px;
 
 /* -- TYPOGRAPHY -- */
 
-@import url('https://fonts.googleapis.com/css?family=Glegoo:400,700');
-@import url("https://use.typekit.net/etu1qor.css");
+@import url('https://fonts.googleapis.com/css?family=Arimo:400,700');
+@import url('https://fonts.googleapis.com/css?family=Hind:400,700');
 
-$title-font: 'Glegoo', serif;
-$body-font: 'europa', sans-serif;
+
+$title-font: 'Arimo', sans-serif;
+$body-font: 'Hind', sans-serif;
 
