--- a/client/src/assets/styles/_elements.scss
+++ b/client/src/assets/styles/_elements.scss
@@ -168,4 +168,8 @@ input{
   height: 30px;
   padding: 0px 5px;
   width: 100%;
+  border: none;
+  background: #efefef;
+  font-size: 1.4em;
+  padding: 20px 5px;
 }
