--- a/client/src/assets/styles/_objects.scss
+++ b/client/src/assets/styles/_objects.scss
@@ -95,3 +95,22 @@ input[type='file']{
   margin: 0px auto;
   max-width: 1200px;
 }
+
+.header{
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  background: rgba(0,0,0,0.5);
+}
+
+.footer{
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  background: rgba(0,0,0,0.5);
+  padding: 10px 0px;
+
+  p {
+    color: white;
+  }
+}
