--- a/client/src/assets/styles/styles.css
+++ b/client/src/assets/styles/styles.css
@@ -2289,23 +2289,22 @@ input[type='file'] {
   align-items: center;
   flex-direction: column;
   width: 100%; }
+  .login h1 {
+    padding: 0px 0px 10px; }
+  .login p {
+    color: white; }
   .login .error {
     padding: 0px 0px 10px;
     color: red; }
 
 .login__form {
-  background: white;
-  margin: 20px;
-  box-shadow: 1px 1px 1px 1px #aaa;
-  padding: 20px; }
+  margin-top: 10px; }
 
 .login__sign-up-link {
-  background: white;
-  margin: 10px;
-  box-shadow: 1px 1px 1px 1px #aaa;
-  padding: 20px 39px;
   text-decoration: underline;
-  color: blue; }
+  color: white; }
+  .login__sign-up-link:hover {
+    color: #618DFF; }
 
 .main {
   height: 100vh;
